[tool.poetry]
name = "web-home-work-9"
version = "0.1.0"
description = ""
authors = ["Hubsit <vitaliy.kievskiy@hotmail.com>"]
readme = "README.md"
packages = [{include = "web_home_work_9"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
